--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Jekyll Template for Project Websites</h1>
-        <p>Simple and modern design for publishing blog posts, documentation and many more things about your project.
-          You can now clone and start to create a website for your project like this one.</p>
-        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | relative_url }}" role="button">Learn more</a></p>
+        <h1>Autonomous Delivery in Urban Environments</h1>
+        <p>We present an end to end autonomous delivery solution specifically designed to handle item fulfillment in the hustle and bustle
+        of the city. Whether you want to retrieve groceries or packages from the comfort of your home, Caravel has got you covered. And the
+        best part... you won't have to tip the driver.</p>
     </div>
 </div>
 
@@ -15,7 +15,8 @@ layout: default
     <div class="row">
         <div class="col-md-6">
             <h2 class="header-light regular-pad">What is Jekyll?</h2>
-              <p class="lead">Jekyll is a simple, blog-aware, static site generator. It takes a template
+              <p class="lead">
+              Jekyll is a simple, blog-aware, static site generator. It takes a template
               directory containing raw text files in various formats, runs it through
               a converter (like <a href="https://daringfireball.net/projects/markdown/">Markdown</a>)
               and our <a href="https://github.com/Shopify/liquid/wiki">Liquid</a> renderer, and
@@ -23,7 +24,8 @@ layout: default
               for serving with your favorite web server. Jekyll also happens to be the engine
               behind <a href="https://pages.github.com">GitHub Pages</a>, which means you can use Jekyll
               to host your project’s page, blog, or website from GitHub’s servers <strong>for
-              free</strong>.</p>
+              free</strong>.
+              </p>
         </div>
         <div class="col-md-6 text-center">
             <img src="{{ "/assets/img/jekyll-dark.png" | relative_url }}" alt="Jekyll logo" class="img-responsive">
