--- a/index.html
+++ b/index.html
@@ -11,16 +11,49 @@ layout: default
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h2 class="header-light regular-pad">What is Caravel?</h2>
-              <p class="lead">
-              Need to fill this in
+<div class="container"> <div class="row"> <div class="col-md-6"> <h2
+class="header-light regular-pad">What is Caravel?</h2> <p class="lead"> 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vulputate, felis
+              interdum pharetra lobortis, justo nisl malesuada tortor, ac aliquam enim eros
+              et erat. Quisque in ligula blandit, vulputate est eget, pellentesque ligula.
+              Mauris porta et tortor at sagittis. Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit. Phasellus nibh eros, varius id varius sit amet, iaculis quis
+              nisi. Sed faucibus massa vel semper viverra. Aenean maximus magna vel mauris
+              bibendum sodales. Nam sit amet tortor imperdiet, condimentum quam in, posuere
+              nulla. In sit amet turpis nisi.
+
+              Phasellus elementum leo ac est faucibus vestibulum. Morbi vitae
+              convallis ipsum. Praesent ante elit, sagittis non odio at,
+              pellentesque tristique nisl. Morbi a diam id velit aliquam
+              accumsan quis et odio. Etiam et rhoncus odio. Praesent tincidunt
+              nulla hendrerit risus venenatis interdum. Pellentesque eget
+              tellus ut nibh porttitor volutpat.
               </p>
         </div>
         <div class="col-md-6 text-center">
             <img src="{{ "/assets/img/wesley.jpeg" | relative_url }}" alt="Jekyll logo" class="img-responsive">
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-sm-4">
+            <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Easy to install and publish</h3>
+            <p>Get started by cloning source into GitHub account of your project. Thanks to <a href="https://pages.github.com">GitHub Pages</a>,
+              it will be automatically compiled and published under your account's (or organisation's) subdomain under <code>github.io</code>.
+            </p>
+        </div>
+        <div class="col-sm-4">
+            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Modular Styling and Templating</h3>
+            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
+            You can change the theme or write your custom one by overwriting bootstrap sass variables for a different color set, font options, etc.</p>
+        </div>
+        <div class="col-sm-4">
+            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Git-based source control</h3>
+            <p>Leverage from Git version control system by
+              maintaining your documentation along with the source code; publish the page when you merge to the master branch.</p>
         </div>
     </div>
 </div>
