--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ layout: default
     <div class="container">
         <h1>On the way to Autonomous Delivery</h1>
         <p>We present an end to end autonomous delivery solution specifically designed to handle item fulfillment in the hustle and bustle
-        of the city. Whether you want to retrieve groceries or packages from the comfort of your home, Caravel has got you covered. And the
-        best part... you won't have to tip the driver.</p>
+        of the city. Whether you want to retrieve groceries or packages from the comfort of your home, Caravel has got you covered.</p>
     </div>
 </div>
 
@@ -31,7 +30,7 @@ class="header-light regular-pad">What is Caravel?</h2> <p class="lead">
               </p>
         </div>
         <div class="col-md-6 text-center">
-            <img src="{{ "/assets/img/wesley.jpeg" | relative_url }}" alt="Jekyll logo" class="img-responsive">
+            <img src="{{ "/assets/img/team.jpg" | relative_url }}" alt="Jekyll logo" class="img-responsive">
         </div>
     </div>
     <hr>
