--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@ layout: default
 <div class="header-container jumbotron">
     <div class="container">
         <h1>On the way to Autonomous Delivery</h1>
-        <p>We present an end to end autonomous delivery solution specifically designed to handle item fulfillment in the hustle and bustle
+        <p>
+        We present an end to end autonomous delivery solution specifically designed to handle item fulfillment in the hustle and bustle
         of the city. Whether you want to retrieve groceries or packages from the comfort of your home, Caravel has got you covered.</p>
+        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | relative_url }}" role="button">Learn more</a></p>
     </div>
 </div>
 
