--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ class="header-light regular-pad">What is Caravel?</h2> <p class="lead">
               </p>
         </div>
         <div class="col-md-6 text-center">
-            <img src="{{ "/assets/img/team.jpg" | relative_url }}" alt="Jekyll logo" class="img-responsive">
+            <img style="box-shadow: 0 0 8px 8px white inset;" src="{{ "/assets/img/team.jpg" | relative_url }}" alt="Jekyll logo" class="img-responsive">
         </div>
     </div>
     <hr>
