update front page

--- a/index.html
+++ b/index.html
@@ -6,33 +6,48 @@ layout: default
     <div class="container">
         <h1>On the way to Autonomous Delivery</h1>
         <p>
-        We present an end to end autonomous delivery solution specifically designed to handle item fulfillment in the hustle and bustle
-        of the city. Whether you want to retrieve groceries or packages from the comfort of your home, Caravel has got you covered.</p>
+
+        Our vision is an end to end autonomous vehicle designed specifically to
+        handle item deliveries in urban environments.  Current food delivery
+        solutions depend on human couriers to achieve product fulfillment. If
+        self driving vehicles were employed instead, delivery fees could be
+        dramatically reduced. Our project focuses on the perception systems
+        that would power such a vehicle.
+
         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | relative_url }}" role="button">Learn more</a></p>
     </div>
 </div>
 
 <div class="container"> <div class="row"> <div class="col-md-6"> <h2
 class="header-light regular-pad">What is Caravel?</h2> <p class="lead"> 
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vulputate, felis
-              interdum pharetra lobortis, justo nisl malesuada tortor, ac aliquam enim eros
-              et erat. Quisque in ligula blandit, vulputate est eget, pellentesque ligula.
-              Mauris porta et tortor at sagittis. Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit. Phasellus nibh eros, varius id varius sit amet, iaculis quis
-              nisi. Sed faucibus massa vel semper viverra. Aenean maximus magna vel mauris
-              bibendum sodales. Nam sit amet tortor imperdiet, condimentum quam in, posuere
-              nulla. In sit amet turpis nisi.
+        
+        One of the fastest growing markets in 2020 is food delivery. Especially
+        in cities where traffic congestion is common and it is not feasible to
+        own a car, people are finding it increasingly advantageous to use services
+        such as InstaCart or Uber Eats to retrieve groceries or meals.
 
-              Phasellus elementum leo ac est faucibus vestibulum. Morbi vitae
-              convallis ipsum. Praesent ante elit, sagittis non odio at,
-              pellentesque tristique nisl. Morbi a diam id velit aliquam
-              accumsan quis et odio. Etiam et rhoncus odio. Praesent tincidunt
-              nulla hendrerit risus venenatis interdum. Pellentesque eget
-              tellus ut nibh porttitor volutpat.
-              </p>
+        Unfortunately, delivery fees are quite expensive. When getting takeout
+        delivered, the cost of deliveries may be on par with the price of the
+        original meal in extreme cases. If delivery fees could be reduced, then
+        food delivery would be viable to a much wider range of people.
+
+        One way to reduce delivery fees would be to employ autonomous vehicles
+        instead of human drivers. The core motivation for this project is the
+        concept of a compact, low-cost self driving vehicle designed
+        specifically to carry groceries and takeout orders instead of
+        passengers that could navigate the streets of an urban environment.
+
+        As the vision for this project is quite demanding, the scope of our
+        capstone has been reduced to only include select software components of
+        an autonomous delivery vehicle. Specifically, the perception system is
+        chosen as the primary subject of our capstone.
+
+        
+
+        </p>
         </div>
         <div class="col-md-6 text-center">
-            <img style="box-shadow: 0 0 8px 8px white inset;" src="{{ "/assets/img/team.jpg" | relative_url }}" alt="Jekyll logo" class="img-responsive">
+            <img style="padding-top:60px; padding-top:30px" src="{{ "/assets/img/team.jpg" | relative_url }}" alt="Jekyll logo" class="img-responsive">
         </div>
     </div>
     <hr>
