--- a/index.html
+++ b/index.html
@@ -21,55 +21,26 @@ layout: default
 <div class="container"> <div class="row"> <div class="col-md-6"> <h2
 class="header-light regular-pad">What is Caravel?</h2> <p class="lead"> 
         
-        One of the fastest growing markets in 2020 is food delivery. Especially
-        in cities where traffic congestion is common and it is not feasible to
-        own a car, people are finding it increasingly advantageous to use services
-        such as InstaCart or Uber Eats to retrieve groceries or meals.
+        The core motivation for this project is the concept of a compact,
+        low-cost self driving vehicle designed specifically to carry groceries
+        and takeout orders instead of passengers.
 
-        Unfortunately, delivery fees are quite expensive. When getting takeout
-        delivered, the cost of deliveries may be on par with the price of the
-        original meal in extreme cases. If delivery fees could be reduced, then
-        food delivery would be viable to a much wider range of people.
-
-        One way to reduce delivery fees would be to employ autonomous vehicles
-        instead of human drivers. The core motivation for this project is the
-        concept of a compact, low-cost self driving vehicle designed
-        specifically to carry groceries and takeout orders instead of
-        passengers that could navigate the streets of an urban environment.
-
-        As the vision for this project is quite demanding, the scope of our
+        Because the vision for this project is quite demanding, the scope of our
         capstone has been reduced to only include select software components of
         an autonomous delivery vehicle. Specifically, the perception system is
         chosen as the primary subject of our capstone.
 
-        
+        We implement vision algorithms to accomplish lane following, as well
+        as various other modules such as actuation and planning, and test them
+        on a 2019 Toyota Corolla Hatchback.
 
         </p>
         </div>
+
         <div class="col-md-6 text-center">
             <img style="padding-top:60px; padding-top:30px" src="{{ "/assets/img/team.jpg" | relative_url }}" alt="Jekyll logo" class="img-responsive">
         </div>
     </div>
     <hr>
-    <div class="row">
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Easy to install and publish</h3>
-            <p>Get started by cloning source into GitHub account of your project. Thanks to <a href="https://pages.github.com">GitHub Pages</a>,
-              it will be automatically compiled and published under your account's (or organisation's) subdomain under <code>github.io</code>.
-            </p>
-        </div>
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Modular Styling and Templating</h3>
-            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
-            You can change the theme or write your custom one by overwriting bootstrap sass variables for a different color set, font options, etc.</p>
-        </div>
-        <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Git-based source control</h3>
-            <p>Leverage from Git version control system by
-              maintaining your documentation along with the source code; publish the page when you merge to the master branch.</p>
-        </div>
-    </div>
+
 </div>
