--- a/index.html
+++ b/index.html
@@ -43,4 +43,32 @@ class="header-light regular-pad">What is Caravel?</h2> <p class="lead">
     </div>
     <hr>
 
+    <div class="row">
+
+        <div class="col-sm-4">
+            <h1 class="text-center"><i class="fas fa-road" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Deep Lane Following</h3>
+            <p>
+            
+            We implement and adapt state of the art deep neural network architectures to identify lane line boundaries in a traffic scene.
+            Post-processing steps rooted in classical computer vision algorithms augment the robustness of network outputs.
+
+            </p>
+        </div>
+
+        <div class="col-sm-4">
+            <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Modular Styling and Templating</h3>
+            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
+            You can change the theme or write your custom one by overwriting bootstrap sass variables for a different color set, font options, etc.</p>
+        </div>
+
+        <div class="col-sm-4">
+            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
+            <h3 class="text-center">Git-based source control</h3>
+            <p>Leverage from Git version control system by
+              maintaining your documentation along with the source code; publish the page when you merge to the master branch.</p>
+        </div>
+    </div>
+
 </div>
