--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ class="header-light regular-pad">What is Caravel?</h2> <p class="lead">
     <div class="row">
 
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fas fa-road" aria-hidden="true"></i></h1>
+            <h1 class="text-center"><i class="fa fa-road" aria-hidden="true"></i></h1>
             <h3 class="text-center">Deep Lane Following</h3>
             <p>
             
@@ -58,9 +58,12 @@ class="header-light regular-pad">What is Caravel?</h2> <p class="lead">
 
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Modular Styling and Templating</h3>
-            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
+            <h3 class="text-center">2 Axis Actuation</h3>
+            <p>
+            
+            This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
             You can change the theme or write your custom one by overwriting bootstrap sass variables for a different color set, font options, etc.</p>
+
         </div>
 
         <div class="col-sm-4">
