update front page

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ class="header-light regular-pad">What is Caravel?</h2> <p class="lead">
             <h3 class="text-center">2 Axis Actuation</h3>
             <p>
             
-            This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
-            You can change the theme or write your custom one by overwriting bootstrap sass variables for a different color set, font options, etc.</p>
+            A <a href="https://comma.ai/shop/products/panda-obd-ii-dongle">comma.ai panda</a> is installed in the Corolla allowing access to the car's CAN bus.
+            We implement actuation for wheel angle as well as acceleration/decceleration to completely control the motion of the car.   
 
         </div>
 
