update front page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ class="header-light regular-pad">What is Caravel?</h2> <p class="lead">
             <p>
             
             We implement a planning module to interpret the identified lane lines from our neural networks and translate that to lateral and
-            longitudinal actuation commands to enable autonomous lane keeping. 
+            longitudinal actuation commands to facilitate autonomous lane keeping. 
             
             </p>
 
