--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ class="header-light regular-pad">What is Caravel?</h2> <p class="lead">
         </div>
 
         <div class="col-sm-4">
-            <h1 class="text-center"><i class="fa fa-lightbulb" aria-hidden="true"></i></h1>
+            <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
             <h3 class="text-center">Path Planning</h3>
             <p>
             
